# genmesh

./: Cargo.toml
src/: circle.rs  cone.rs  cube.rs  cylinder.rs  dodecahedron.rs  icosphere.rs  lib.rs  octahedron.rs  plane.rs  poly.rs  sphere.rs  tetrahedron.rs  torus.rs  triangulate.rs
tests/: test.rs
