[package]
name = "genmesh"
version = "0.6.2"
authors = [
    "Coraline Sherratt <cora.sherratt@gmail.com>",
    "Dzmitry Malyshau <kvarkus@gmail.com>",
    "Mark Hintz"
]
edition = "2018"

license = "Apache-2.0"
description = "A package for generating 3D meshes"
homepage = "https://github.com/gfx-rs/genmesh"
repository = "https://github.com/mhintz/genmesh"

[lib]
name = "genmesh"
path = "src/lib.rs"

[dependencies]
cgmath = { version = "0.16", features = ["mint"] }
mint = "0.5"
